# orb-devkit

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  capacitor.config.ts  ionic.config.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: CONTRIBUTING.md
.github/workflows/: build-apk.yml  build-daemon.yml  publish-daemon.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
app/: app.vue
app/assets/css/: main.css
app/components/: AddTransactionSheet.vue  AiDownloadPill.vue  AiSetupScreen.vue  DaemonStatusPill.vue  DevResetButton.vue  IdleLockScreen.vue  MinimalOrb.vue  OnboardingScreen.vue  OrbChat.vue  OrbitRecap.vue  PairDaemon.vue  PinLockScreen.vue  SplashScreen.vue
app/composables/: useAIMemory.ts  useDaemon.ts  useDark.ts  useDatabase.ts  useDevControl.ts  useDevMode.ts  useDevices.ts  useIdleLock.ts  useNativeLLM.ts  useNav.ts  useOrbAI.ts  usePin.ts  useShake.ts  useStore.ts  useSwipeDown.ts  useTcp.ts
app/layouts/: default.vue
app/pages/: about.vue  bills.vue  cards.vue  developer.vue  devices.vue  env.vue  faq.vue  grocery.vue  index.vue  more.vue  passwords.vue  profile.vue  prompts.vue  randomizer.vue  settings.vue  transaction.vue  vibecode.vue
app/utils/: initDatabase.ts
app/workers/: orb-ai.worker.ts
daemon/: cert.rs  config.rs  crypto.rs  main.rs  mdns.rs  message.rs  pairing.rs  server.rs  store.rs  ws_bridge.rs
(+3 files in other folders)
