[package]
name = "orb-daemon"
version = "0.1.0"
edition = "2021"
description = "Orb DevKit desktop daemon - secure TCP/WS bridge for the Orb mobile app"
authors = ["Orb DevKit"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/orb-devkit"
documentation = "https://docs.rs/orb-daemon"
keywords = ["daemon", "websocket", "IoT", "security", "bridge"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "orb-daemon"
path = "daemon/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
mdns-sd = "0.11"
aes-gcm = "0.10"
hex = "0.4"
hostname = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true